--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -96,6 +96,7 @@ benevolent ,/adj./@仁慈的;,/adj./@樂善好施的;,/adj./@慈善的;
 binoculars ,/n./@双筒望远镜;
 biological ,/adj./@生物学的;
 bitterness ,/n./@苦;,/n./@苦痛;,/n./@苦難;
+blacksmith ,/n./@鐵匠;,/n./@鍛工;,/n./@蹄鐵匠;
 bloodstain ,/n./@血跡;
 blundering ,/adj./@浮躁的;
 boisterous ,/adj./@喧鬧的;,/adj./@狂暴的;,/adj./@猛烈的;
@@ -158,7 +159,7 @@ complicate ,/v./使@复杂化;
 compliment ,/n./@恭维;
 comprehend ,/v./@理解;,/v./@领悟;
 compromise ,/v./@妥协;
-conception ,/n./@概念;,/n./@设想;,/n./@怀孕;
+conception ,/n./@概念;,/n./@设想;,/n./@怀孕;,/n./@構想;
 concession ,/n./@讓步;,/n./@退位;,/n./@減免;,/n./@特許;,/n./@租界;
 conclusion ,/n./@结论;,/n./@推论;
 conclusive ,/adj./@结束的;,/adj./@结论性的;,/adj./@确凿的;
@@ -343,7 +344,7 @@ guillotine ,/n./@斷頭台;
 gymnastics ,/n./@體操;
 gyrational ,/adj./@旋轉的;,/adj./@迴旋的;,/adj./@螺旋的;
 gyroscopic ,/adj./@陀螺儀的;,/adj./@迴轉儀的;
-handicraft ,/n./@手工艺品;
+handicraft ,/n./@手工艺品;,/n./@手工藝;
 harmonious ,/adj./@和諧的;,/adj./@協調的;,/adj./@調和的;,/adj./@和聲的;,/adj./@悅耳的;
 helicopter ,/n./@直升飞机;,/n./@直升機;
 hemoglobin ,/redirected./@target="haemoglobin";
@@ -514,6 +515,8 @@ pagination ,/n./@分页;
 parametric ,/n./@參數;
 paranormal ,/adj./@超自然的;,/adj./@超常的;
 paraphrase ,/v./@釋義;,/v./@改述;
+paraplegia ,/n./@半身不遂;,/n./@下身麻痺;,/n./@截癱;
+paraplegic ,/adj./@下身麻痺的;,/adj./@患截瘫的;,/n./@下身麻痺患者;,/n./@截瘫患者;
 Parisienne ,/n./@巴黎女子;,/n./@巴黎女孩;,/adj./@巴黎的;,/adj./@巴黎人的;,/adj./@巴黎式的;
 participle ,/n./@分詞;
 particular ,/adj./特定的;,/adj./@特殊的;,/adj./@挑剔的;,/n./@细节;,/n./@詳細情況;
@@ -542,6 +545,7 @@ phonograph ,/n./@留声机;,/n./@唱机;
 phosphorus ,/n./@磷;
 pickpocket ,/n./@扒手;,/n./@小偷;
 plantation ,/n./@種植園;
+plasticity ,/n./@可塑性;
 playwright ,/n./@剧作家;
 polychrome ,/n./@多彩;,/adj./@多彩的;,/adj./@多色的;
 population ,/n./@人口;
@@ -574,6 +578,8 @@ propulsion ,/n./@推進;
 prosecutor ,/n./@檢察官;
 prosperity ,/n./@繁榮;,/n./@興旺;
 prosperous ,/adj./@繁荣的;
+prosthesis ,/n./@假體;,/n./@義體;,/n./@義肢;,/n./@添頭音;,/n./@添頭音節;
+prosthetic ,/adj./@假體的;,/n./@假體;,/adj./@義肢的;,/n./@義肢;
 protection ,/n./@保護;
 protrusion ,/n./@突出;,/n./@突出物;
 providence ,/n./@天意;
@@ -602,6 +608,7 @@ remarkable ,/adj./@卓越的;,/adj./@非凡的;,/adj./@值得注意的;
 remorseful ,/adj./@懊悔的;,/adj./@悔恨的;
 remunerate ,/vt./@酬勞;
 rendezvous ,/n./@約會;,/n./@會面;,/n./@會合;
+renovation ,/n./@翻新;,/n./@修繕;,/n./@更新;,/n./@修理;
 repatriate ,/v./@遣返;
 repentance ,/n./@悔悟;
 repetition ,/n./@重复;
