--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -221,6 +221,7 @@ independent ,/adj./@独立的;
 indifferent ,/adj./@漠不关心的;,/adj./@不感興趣的;,/adj./@冷淡的;
 indignation ,/n./@愤慨;
 indivisible ,/adj./@不可分割的;
+infantryman ,/n./@步兵;
 inferiority ,/n./@劣勢;
 infertility ,/n./@無生育能力;,/n./@貧瘠;,/n./@不肥沃;
 information ,/n./@信息;
