--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -122,6 +122,7 @@ surreptitious ,/adj./@祕密的;,/adj./@偷偷摸摸的;,/adj./@鬼鬼祟祟的;
 temperamental ,/adj./@喜怒无常的;,/adj./@性情的;
 topographical ,/adj./@地形的;
 transactional ,/adj./@交易的;,/adj./@事務性的;
+Transcaucasia ,/n./@外高加索;
 transcription ,/n./@抄寫;,/n./@抄本;,/n./@抄錄;,/n./@轉錄;
 transgression ,/n./@罪過;,/n./@違法;,/n./@違反;,/n./@犯罪;
 transnational ,/adj./@跨国的;
