--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -351,7 +351,7 @@ full ,/adj./@滿的;
 fume ,/n./@煙;,/n./@煙汽;,/vi./@冒煙;,/vi./@冒出;,/vi./@發怒;,/vt./@薰;,/vt./@冒出;
 fund ,/n./@資金;
 fury ,/n./@暴怒;
-fuse ,/v./@熔化;,/n./@保險絲;,/n./@導火綫;,/v./@融合;
+fuse ,/v./@熔化;,/n./@保險絲;,/n./@導火綫;,/v./@融合;,/v./@熔合;,/vt./@熔接;
 fuss ,/n./@焦躁;,/n./@忙亂;
 gage ,/n./@抵押;
 gain ,/v./@獲得;
@@ -907,6 +907,7 @@ sing ,/v./@歌唱;
 sink ,/v./@沉沒;,/v./@淹沒;
 site ,/n./@地點;
 size ,/n./@大小;,/n./@尺寸;
+skid ,/n./@打滑;,/n./@墊木;,/n./@滑軌;,/v./@打滑;,/n./@制輪器;,/vt./@剎住;
 skim ,/v./@掃視;
 skin ,/n./@皮膚;
 skip ,/v./@跳過;,/v./@略過;
