--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1,7 +1,7 @@
 -hood ,/suff./@狀態;,/suff./@身分;
 -ness ,/suff./@狀態;
 abate ,/vt./@減少;,/vt./@減弱;,/vt./@減輕;
-abbey ,/n./@大修道院;
+abbey ,/n./@大修道院;,/n./@大寺院;
 abhor ,/v./@極度厭惡;
 abide ,/v./@遵守;
 abode ,/n./@住所;,/n./@居住;
@@ -485,7 +485,7 @@ foray ,/n./@涉足;
 force ,/n./@力;
 fordo ,/v./@燬滅;
 forex ,/n./@外匯;,/n./@外匯交易市場;
-forge ,/v./@鍛造;,/v./@僞造;
+forge ,/v./@鍛造;,/v./@僞造;,/n./@鍛冶場;,/n./@鐵工廠;
 forth ,/adv./@向前;,/adv./@向外;
 forum ,/n./@論壇;,/n./@討論會;,/n./@法庭;
 found ,/v./@創辦;,/v./@建立;
@@ -654,7 +654,7 @@ lapel ,/n./@翻領;
 lapse ,/v./@流逝;,/n./@流逝;,/n./@失誤;,/n./@間隔;
 large ,/adj./@大的;
 lasso ,/n./@套索;,/v./@拉攏;,/v./@套捕;
-latch ,/n./@门闩;,/n./@弹簧锁;
+latch ,/n./@门闩;,/n./@弹簧锁;,/vt./@閂上;
 later ,/adv./@后來;,/adv./@稍後;,/adj./@更遲的;
 Latin ,/n./@拉丁語;,/n./@拉丁人;,/adj./@拉丁語的;,/adj./@拉丁人的;
 laugh ,/v./@笑;
@@ -749,7 +749,7 @@ money ,/n./@錢;
 month ,/n./@月;
 moose ,/n./@麋;,/n./@北美麋;,/n./@驼鹿;
 moral ,/adj./@道德的;,/n./@教訓;
-moron ,/n./@傻子;
+moron ,/n./@傻子;,/n./@笨蛋;
 morph ,/n.v./@詞態;,/v./@改變;
 motel ,/n./@汽車旅館;
 motto ,/n./@座右銘;,/n./@格言;
@@ -862,7 +862,7 @@ plait ,/n./褶;,/v./@編織;
 plane ,/n./@飛機;
 plank ,/n./@板;,/n./@木板;,/n./@基礎;,/n./@要點;,/n./@政綱;
 plant ,/n./@植物;,/v./@栽培;,/n./@工廠;
-plate ,/n./@盤子;,/n./@盤;
+plate ,/n./@盤子;,/n./@盤;,/n./@金屬板;,/n./@薄板;,/n./@印版;,/n./@金屬牌;
 plead ,/v./@請求;,/v./@乞求;
 pleat ,/v./@打褶;
 pluck ,/v./@拉;,/v./@拽;,/v./@扯;,/n./@勇氣;,/n./@内臟;
@@ -1103,6 +1103,7 @@ solar ,/adj./@太陽的;
 solid ,/n./@固體;
 solve ,/v./@解決;
 sonde ,/n./@探空火箭;,/n./@探空氣球;,/n./@地下探测仪;,/n./@水下探测仪;
+sonic ,/adj./@聲音的;,/adj./@聲波的;,/adj./@音速的;,/adj./@聲速的;
 sooth ,/adj./@眞實的;
 sorry ,/n./@抱歉;,/adj./@悲傷的;
 sound ,/n./@聲音;
@@ -1151,6 +1152,7 @@ stall ,/v./@拖延;,/n./@貨攤;,/n./@畜欄;,/n./@馬廄;,/n./@小隔间;,/n./@
 stamp ,/n./@郵票;
 stand ,/v./@站立;,/v./@忍受;,/v./@坐落;
 stare ,/v./@盯;
+stark ,/adj./@荒涼的;,/adj./@鲜明的;,/adj./@明顯的;,/adj./@赤裸裸的;,/adj./@僵硬的;,/adj./@严酷的;,/adj./@刻板的;
 start ,/v./@開始;
 stash ,/n./@藏匿處;,/vt./@貯藏;
 state ,/n./@國家;,/v./@陳述;,/v./@規定;,/v./@確立;
