--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -28,6 +28,7 @@ adverb ,/n./@副詞;
 advert ,/v./@引起註意;
 advice ,/n./@建議;
 advise ,/v./@建議;
+aerate ,/vt./@使通氣;,/vt./@使透氣;,/vt./@充氣於;
 aerial ,/adj./@空中的;,/adj./@航空的;,/adj./@天空的;,/adj./@空氣的;,/n./@天綫;
 affair ,/n./@事情;
 affect ,/v./@影響;
@@ -291,7 +292,7 @@ clumsy ,/adj./@笨拙的;
 clutch ,/v./@抓緊;
 coarse ,/adj./@粗糙的;
 cocoon ,/n./@茧;,/n./@蚕茧;
-coerce ,/v./@強制;,/v./@迫使;
+coerce ,/v./@強制;,/v./@迫使;,/vt./@强迫;
 coffee ,/n./@咖啡;
 coffin ,/n./@棺材;
 cogent ,/adj./@令人信服的;,/adj./@相關的;
@@ -772,6 +773,7 @@ killer ,/n./@殺手;
 kindle ,/v./@點燃;
 kitten ,/n./@小貓;
 knight ,/n./@騎士;
+kosher ,/adj./@符合猶太教規的;,/adj./@合法的;,/adj./@合適的;,/adj./@潔食的;
 Kosovo ,/n./@科索沃;
 kraken ,/n./@海怪;
 lackey ,/n./@男僕;,/n./@侍從;,/n./@馬屁精;
@@ -816,6 +818,7 @@ lizard ,/n./@蜥蜴;
 loathe ,/v./@厭惡;
 locate ,/v./@定位;
 logout ,/n./@注銷;,/n./@登出;,/n./@退出;
+loiter ,/vi./@閒逛;,/vi./@遊蕩;,/vi./@消磨時光;,/vt./@消磨;
 London ,/n./@倫敦;
 lonely ,/adj./@孤獨的;,/adj./@寂寞的;
 lotion ,/n./@洗液;
@@ -928,6 +931,8 @@ negate ,/vt./@否定;,/vt./@取消;
 nephew ,/n./@侄子;,/n./@外甥;
 nestle ,/v./@安頓;,/v./@建巢;
 neural ,/adj./@神經的;
+neuro- ,/pref./@神經的;
+neuron ,/n./@神經元;
 neuter ,/adj./@中性的;,/adj./@無性的;,/n./@中性詞;,/n./@無性者;,/n./@無性動物;
 nicety ,/n./@精密;
 nickel ,/n./@鎳幣;
@@ -1194,7 +1199,7 @@ rhotic ,/adj./@發R音的;,/adj./@R發音的;
 rhythm ,/n./@旋律;,/n./@節奏;,/n./@韻律;,/n./@節拍;
 ribald ,/adj./@下流的;,/adj./@粗俗的;,/adj./@猥褻的;
 ribbon ,/n./@帶;,/n./@緞帶;
-riddle ,/n./@字謎;
+riddle ,/n./@字謎;,/n./@謎;,/n./@謎語;
 riffle ,/n./@淺灘;,/n./@急流;,/v./@翻閲;,/v./@洗牌;
 rights ,/n./@權利;
 rigour ,/n./@严酷;,/n./@严苛;,/n./@严谨;,/n./@严格;,/n./@缜密;
@@ -1318,6 +1323,7 @@ sloppy ,/adj./@草率的;,/adj./@马虎的;,/adj./@稀薄的;,/adj./@邋遢的;
 slouch ,/vi./@低头垂肩地坐着;,/vi./@无精打采地站着;
 sludge ,/n./@淤泥;,/n./@烂泥;,/n./@油泥;
 sluice ,/n./@水闸;,/n./@水道;,/n./@冲洗;,/vt./@冲洗;,/vi./@泄出;
+smithy ,/n./@鐵匠舖;,/n./@鍛冶場;,/n./@鐵工廠;
 smooch ,/v./@接吻;,/v./@弄髒;
 smooth ,/adj./@光滑的;,/adj./@順利的;
 smudge ,/v./@弄髒;,/n./@汙點;,/n./@汙跡;
@@ -1355,7 +1361,7 @@ spouse ,/n./@配偶;
 sprain ,/vt./@扭伤;,/n./@扭伤;
 spread ,/v./@傳播;
 spring ,/n./@春;,/n./@泉;
-sprint ,/v./@衝刺;
+sprint ,/v./@衝刺;,/n./@短跑;,/n./@衝刺;
 sprite ,/n./@妖精;,/n./@精靈;
 sputum ,/n./@痰;
 squall ,/v./@嚎啕;,/v./@尖叫;
@@ -1465,7 +1471,7 @@ threat ,/n./@恐嚇;
 thrice ,/adv./@三次;,/adv./@三度;,/adv./@三倍;
 thrift ,/n./@節儉;
 thrill ,/v./(使)@激動;
-thrive ,/v./@興旺;
+thrive ,/v./@興旺;,/vi./@繁榮;,/vi./@茁壯成長;,/vi./@茂盛生長;
 throat ,/n./@喉嚨;
 throne ,/n./@王座;,/n./@寶座;,/n./@王權;
 thrust ,/v./@推;,/v./@刺;
