--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -101,7 +101,7 @@ atrophy ,/n./@萎縮;,/n./@衰退;
 attempt ,/v./@企圖;,/v./@嘗試;,/n./@企圖;,/n./@嘗試;
 attract ,/v./@吸引;
 auction ,/n./@拍賣;
-augment ,/v./@增大;
+augment ,/v./@增大;,/v./@加強;,/v./@擴大;,/v./@增加;,/v./@提高;
 aureate ,/adj./@金色的;,/adj./@鍍金的;,/adj./@燦爛的;
 auspice ,/n./@贊助;,/n./@主辦;,/n./@吉兆;,/n./@預兆;
 austere ,/adj./@嚴峻的;
@@ -204,6 +204,7 @@ capture ,/v./@俘獲;,/v./@捕獲;
 caracal ,/n./@獰貓;,/n./@野貓;
 caramel ,/n./@焦糖;,/n./@飴糖;
 caravan ,/n./@房车;,/n./@大篷车;,/n./@车队;,/n./@旅行队;
+carbine ,/n./@卡賓槍;
 carcass ,/n./@屍體;
 careful ,/adj./@小心的;
 carmine ,/n./@洋紅;,/adj./@洋紅色的;
@@ -213,6 +214,7 @@ carrier ,/n./@載體;,/n./@航空母艦;
 cartoon ,/n./@卡通;,/n./@動漫;
 cascade ,/n./@瀑布;,/v./@傾瀉;,/n./@層疊;
 cashier ,/n./@出納;
+Caspian ,/adj./@裡海的;
 Catalan ,/adj./@加泰羅尼亞的;,/n./@加泰羅尼亞人;,/n./@加泰羅尼亞語;,/adj./@加泰羅尼亞人的;,/adj./@加泰羅尼亞語的;
 catchup ,/n./@番茄醬;
 caution ,/n./@警告;,/n./@註意;
@@ -449,6 +451,7 @@ divulge ,/vt./@洩露;,/vt./@暴露;
 dolphin ,/n./@海豚;
 doormat ,/n./@受氣包;
 dormant ,/adj./@休眠的;
+dragoon ,/n./@龍騎兵;,/n./@重騎兵;,/vt./@迫使;
 drastic ,/adj./@激烈的;
 dubiety ,/n./@懷疑;
 dubious ,/adj./@可疑的;,/adj./@不确定的;,/adj./@怀疑的;
@@ -543,6 +546,7 @@ failure ,/n./@失敗;
 fanatic ,/n./@狂熱者;,/n./@狂熱分子;,/n./@入迷者;,/adj./@狂熱的;,/adj./@入迷的;
 fantasy ,/n./@幻想;
 faraway ,/adj./@很遠的;
+farrier ,/n./@蹄鐵匠;,/n./@蹄鐵工;
 farther ,/adj./@更遠的;,/adj./@進一步的;
 fascist ,/n./@法西斯分子;
 fashion ,/n./@時尚;
@@ -576,6 +580,7 @@ foreign ,/adj./@外國的;
 foresee ,/v./@預見;,/v./@預知;
 forever ,/adv./@永遠;
 forfeit ,/n./@罰金;,/n./@喪失;,/n./@被沒收物;
+forgery ,/n./@偽造;,/n./@偽造物;,/n./@贗品;
 forgive ,/v./@原諒;
 forlorn ,/adj./@被遺棄的;,/adj./@絕望的;,/adj./@孤獨的;
 formula ,/n./@公式;,/n./@准則;,/n./@配方;
@@ -749,6 +754,7 @@ journal ,/n./@期刊;,/n./@日誌;
 journey ,/n./@旅行;
 Jupiter ,/n./@木星;
 justify ,/v./@證明;
+kashrut ,/n./@猶太教飲食教規;,/n./@猶太教飲食規定;
 ketchup ,/n./@蕃茄醬;
 kidding ,/n./@開玩笑;
 kingdom ,/n./@王國;,/n./@界;,/n./@領域;
@@ -844,6 +850,7 @@ montage ,/n./@蒙太奇;
 monthly ,/n./@月刊;
 mordant ,/adj./@尖酸的;,/adj./@尖刻的;,/n./@媒染劑;,/n./@腐蝕劑;
 morning ,/n./@早上;
+moronic ,/adj./@愚蠢的;
 mugwort ,/n./@艾蒿;
 mulatto ,/n./@黑白混血兒;
 mummify ,/vt./@木乃伊化;
@@ -923,6 +930,7 @@ overlap ,/v./@重叠;,/v./@重复;
 oxidize ,/vt./@氧化;
 pacific ,/adj./@和平的;
 package ,/n./@包裹;,/n./@包;
+pageant ,/n./@露天歷史劇;,/n./@慶典;,/n./@盛裝遊行;,/n./@紛繁的場景;,/n./@選美比賽;
 paladin ,/n./@騎士;,/n./@遊俠;
 palpate ,/vt./@觸診;
 pancake ,/n./@薄烤餅;
@@ -983,6 +991,7 @@ pivotal ,/adj./@關鍵的;,/adj./@中樞的;,/adj./@樞軸的;,/adj./@重要的;
 placard ,/n./@標語牌;,/n./@海報;,/v./@張貼;,/n./@招貼;
 placate ,/v./@撫慰;,/v./@懷柔;,/v./@和解;
 placebo ,/n./@安慰剂;,/n./@晚祷词;
+plastic ,/adj./@可塑的;,/adj./@塑料的;,/adj./@塑造的;,/n./@塑料;
 plateau ,/n./@髙原;,/n./@髙地;
 platoon ,/n./@排;,/n./@群;,/n./@組;
 pleural ,/adj./@肋膜的;,/adj./@胸膜的;
@@ -1183,6 +1192,8 @@ secrecy ,/n./@秘密;
 section ,/n./@部分;,/n./@區域;,/n./@章節;
 secular ,/adj./@世俗的;,/adj./@长期的;,/adj./@现世的;
 segment ,/n./@部分;,/n./@段;,/n./@節;,/n./@片;,/v./@分割;
+seismal ,/redirected./@target="seismic";
+seismic ,/adj./@地震的;,/adj./@地震引起的;
 selfish ,/adj./@自私的;
 seminar ,/n./@研討會;,/n./@學術講座;,/n./@研討班;
 sensual ,/adj./@肉欲的;,/adj./@感覺的;
@@ -1308,6 +1319,7 @@ sustain ,/v./@維持;
 swallow ,/n./@燕子;,/v./@吞咽;
 sweater ,/n./@毛綫衣;
 synagog ,/n./@猶太教堂;
+synapse ,/n./@突觸;
 synergy ,/n./@協同力;,/n./@協力;
 synonym ,/n./@同義詞;,/n./@同義語;
 tactful ,/adj./@機智的;,/adj./@老練的;
