--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -453,7 +453,7 @@ evaluate ,/v./@评估;
 eventual ,/adj./@最终的;,/adj./@结局的;
 everyone ,/pron./@每人;
 evidence ,/n./@证据;
-excavate ,/v./@发掘;
+excavate ,/v./@发掘;,/v./@挖掘;,/vt./@開鑿;
 exchange ,/v./@交换;
 exciting ,/adj./@令人兴奋的@<excite的正在进行时>;
 exemplar ,/n./@模範;,/n./@範例;,/n./@典型;
@@ -631,6 +631,7 @@ inherent ,/adj./@固有的;
 initiate ,/v./@开始;,/v./@创始;
 innocent ,/adj./@天真的;
 innovate ,/v./@革新;
+inscribe ,/vt./@刻寫;,/vt./@題寫;,/vt./@題贈;,/vt./@註冊;
 insolent ,/adj./@無理的;,/adj./@傲慢的;
 insomnia ,/n./@不眠症;,/n./@失眠症;
 instance ,/n./@例子;,/n./@實例;,/n./@情況;,/n./@場合;,/vt./@舉例;,/vt./@引證;
@@ -663,11 +664,12 @@ junction ,/n./@会合处;,/n./@交叉路口;
 Jurassic ,/n./@侏羅紀;,/adj./@侏羅紀的;
 juvenile ,/adj./@青少年的;,/n./@少年;,/n./@幼兽;,/n./@雏鸟;
 kangaroo ,/n./@袋鼠;
+kashruth ,/redirected./@target="kashrut";
 keyboard ,/n./@键盘;
 kinghood ,/n./@國王身分;,/n./@王道;
 kingship ,/n./@國王身分;,/n./@王權;,/n./@王位;
 lameness ,/n./@瘸腿;,/n./@跛足;,/n./@蹩腳;
-laminate ,/v./@鍛壓;,/v./@層壓;,/v./@分成薄片;
+laminate ,/v./@鍛壓;,/v./@層壓;,/v./@分成薄片;,/vt./@製成薄片;
 landfill ,/n./@垃圾填埋;,/n./@垃圾填埋地;
 landmark ,/n./@地標;,/n./@界標;,/n./@里程碑;
 landmine ,/n./@地雷;
@@ -979,7 +981,7 @@ religion ,/n./@宗教;
 remember ,/v./@记得;,/v./@想起;,/v./@記住;
 renegade ,/adj./@叛教的;,/n./@叛徒;,/adj./@反叛的;,/n./@叛逆者;
 renounce ,/vt./@聲明放棄;,/vt./@拋棄;,/vt./@宣布中止;,/vt./@退出;,/vt./@摒棄;
-renovate ,/v./@更新;,/v./@修复;
+renovate ,/v./@更新;,/v./@修复;,/vt./@翻新;,/vt./@修繕;
 repartee ,/n./@妙語;,/n./@巧辯;,/n./@機智的回答;
 reporter ,/n./@報告人;,/n./@記者;
 reprieve ,/n./@暂缓;,/n./@缓刑;,/v./@暂时解救;
@@ -1092,6 +1094,7 @@ splendor ,/n./@光彩;,/n./@壯麗;,/n./@壯觀;,/n./@光輝;,/n./@輝煌;
 spoonful ,/n./@一匙的量;
 sporadic ,/adj./@零星的;,/adj./@分散的;,/adj./@偶發的;,/adj./@散發的;
 sprinkle ,/vt./@洒;,/vt./@撒;,/n./@少量;
+sprinter ,/n./@短跑運動員;
 spurious ,/adj./@假的;
 squadron ,/n./@中隊;,/n./@分遣隊;,/n./@分隊;
 squander ,/v./@浪費;,/vt./@挥霍;
@@ -1154,6 +1157,7 @@ taxonomy ,/n./@分類法;,/n./@分類學;
 tectonic ,/adj./@构造的;,/adj./@建筑的;,/adj./@地壳构造的;
 teenager ,/n./@青少年;
 teleport ,/v./@瞬間移動;,/v./@心靈傳輸;
+telomere ,/n./@端粒;
 template ,/n./@模版;
 temporal ,/adj./@时间的;,/adj./@暫存的;,/adj./@短暫的;,/adj./@世間的;,/adj./@世俗的;,/adj./@現世的;,/adj./@時態的;
 tendency ,/n./@趋势;
@@ -1206,6 +1210,7 @@ ultimate ,/adj./@终极的;,/adj./@根本的;,/n./@终极;,/n./@根本;
 uncommon ,/adj./@少见的;
 underway ,/adj./@正在进行的;
 unfetter ,/v./@釋放;,/v./@解放;,/v./@掙脫;
+ungulate ,/adj./@有蹄的;,/n./@有蹄類動物;
 universe ,/n./@宇宙;
 unsavory ,/adj./@難喫的;,/adj./@沒有香味的;
 unsecure ,/adj./@不安全的;,/adj./@未加密的;
