--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -96,6 +96,7 @@ benevolent
 binoculars
 biological
 bitterness
+blacksmith
 bloodstain
 blundering
 boisterous
@@ -514,6 +515,8 @@ pagination
 parametric
 paranormal
 paraphrase
+paraplegia
+paraplegic
 Parisienne
 participle
 particular
@@ -542,6 +545,7 @@ phonograph
 phosphorus
 pickpocket
 plantation
+plasticity
 playwright
 polychrome
 population
@@ -574,6 +578,8 @@ propulsion
 prosecutor
 prosperity
 prosperous
+prosthesis
+prosthetic
 protection
 protrusion
 providence
@@ -602,6 +608,7 @@ remarkable
 remorseful
 remunerate
 rendezvous
+renovation
 repatriate
 repentance
 repetition
