--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -1103,6 +1103,7 @@ solar
 solid
 solve
 sonde
+sonic
 sooth
 sorry
 sound
@@ -1151,6 +1152,7 @@ stall
 stamp
 stand
 stare
+stark
 start
 stash
 state
