--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -28,6 +28,7 @@ adverb
 advert
 advice
 advise
+aerate
 aerial
 affair
 affect
@@ -772,6 +773,7 @@ killer
 kindle
 kitten
 knight
+kosher
 Kosovo
 kraken
 lackey
@@ -816,6 +818,7 @@ lizard
 loathe
 locate
 logout
+loiter
 London
 lonely
 lotion
@@ -928,6 +931,8 @@ negate
 nephew
 nestle
 neural
+neuro-
+neuron
 neuter
 nicety
 nickel
@@ -1318,6 +1323,7 @@ sloppy
 slouch
 sludge
 sluice
+smithy
 smooch
 smooth
 smudge
