--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -631,6 +631,7 @@ inherent
 initiate
 innocent
 innovate
+inscribe
 insolent
 insomnia
 instance
@@ -663,6 +664,7 @@ junction
 Jurassic
 juvenile
 kangaroo
+kashruth
 keyboard
 kinghood
 kingship
@@ -1092,6 +1094,7 @@ splendor
 spoonful
 sporadic
 sprinkle
+sprinter
 spurious
 squadron
 squander
@@ -1154,6 +1157,7 @@ taxonomy
 tectonic
 teenager
 teleport
+telomere
 template
 temporal
 tendency
@@ -1206,6 +1210,7 @@ ultimate
 uncommon
 underway
 unfetter
+ungulate
 universe
 unsavory
 unsecure
