--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -242,6 +242,7 @@ corporeal
 correlate
 cosmology
 courteous
+craftsman
 credulous
 criterion
 criticize
@@ -650,11 +651,13 @@ methodist
 metrology
 microwave
 migratory
+millennia
 millipede
 miniature
 miserable
 molecular
 momentous
+monastery
 monologue
 monstrous
 moustache
