--- a/Files/lang/phrases/2 word phrase.csv
+++ b/Files/lang/phrases/2 word phrase.csv
@@ -143,3 +143,7 @@
 ,subordinate,clause,從句;
 ,subsequent,to,在...之後;
 ,Down's,syndrome,唐氏綜合症;
+,loiter,away,閒混;
+,beauty,contest,選美比賽;
+,Caspian,Sea,裡海;
+,South,Caucasus,南高加索;
