--- a/Files/lang/ch/chinese15.csv
+++ b/Files/lang/ch/chinese15.csv
@@ -7,6 +7,7 @@ distinguishable ,/adj./@可辨别的;
 electromagnetic ,/adj./@電磁的;,/adj./@電磁體的;
 experimentation ,/n./@试验;
 hypoproteinemia ,/n./@低蛋白血症;
+neuroplasticity ,/n./@神經可塑性;
 notwithstanding ,/adv./@尽管如此;,/adv./@即使这样;
 perspectiveness ,/n./@前瞻性;
 straightforward ,/adj./@直爽的;,/adj./@徑直的;,/adj./@直截了當的;,/adj./@簡單的;,/adj./@明確的;
