--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -242,6 +242,7 @@ corporeal ,/adj./@物质的;
 correlate ,/v./@关联;
 cosmology ,/n./@宇宙学;
 courteous ,/adj./@有禮貌的;
+craftsman ,/n./@工匠;,/n./@技工;,/n./@工藝師;
 credulous ,/adj./@輕信的;
 criterion ,/n./@标准;
 criticize ,/v./@批评;
@@ -650,11 +651,13 @@ methodist ,/n./@衛理公會教徒;,/n./@循道宗教徒;
 metrology ,/n./@度量衡學;,/n./@計量學;
 microwave ,/n./@微波;
 migratory ,/adj./@遷徙的;,/adj./@遷移的;,/adj./@遷居的;,/adj./@洄游的;,/adj./@遊走性的;
+millennia ,/redirected./@target="millennium";
 millipede ,/n./@千足虫;,/n./@马陆;
 miniature ,/n./@微缩模型;,/adj./@小型的;
 miserable ,/adj./@痛苦的;
 molecular ,/adj./@分子的;
 momentous ,/adj./@重要的;
+monastery ,/n./@修道院;,/n./@寺院;
 monologue ,/n./@獨白;
 monstrous ,/adj./@可怕的;,/adj./@極惡的;
 moustache ,/n./@胡子;,/n./@胡须;
