--- a/Files/lang/en/english15.csv
+++ b/Files/lang/en/english15.csv
@@ -7,6 +7,7 @@ distinguishable
 electromagnetic
 experimentation
 hypoproteinemia
+neuroplasticity
 notwithstanding
 perspectiveness
 straightforward
