--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -204,6 +204,7 @@ capture
 caracal
 caramel
 caravan
+carbine
 carcass
 careful
 carmine
@@ -213,6 +214,7 @@ carrier
 cartoon
 cascade
 cashier
+Caspian
 Catalan
 catchup
 caution
@@ -449,6 +451,7 @@ divulge
 dolphin
 doormat
 dormant
+dragoon
 drastic
 dubiety
 dubious
@@ -543,6 +546,7 @@ failure
 fanatic
 fantasy
 faraway
+farrier
 farther
 fascist
 fashion
@@ -576,6 +580,7 @@ foreign
 foresee
 forever
 forfeit
+forgery
 forgive
 forlorn
 formula
@@ -749,6 +754,7 @@ journal
 journey
 Jupiter
 justify
+kashrut
 ketchup
 kidding
 kingdom
@@ -844,6 +850,7 @@ montage
 monthly
 mordant
 morning
+moronic
 mugwort
 mulatto
 mummify
@@ -923,6 +930,7 @@ overlap
 oxidize
 pacific
 package
+pageant
 paladin
 palpate
 pancake
@@ -983,6 +991,7 @@ pivotal
 placard
 placate
 placebo
+plastic
 plateau
 platoon
 pleural
@@ -1183,6 +1192,8 @@ secrecy
 section
 secular
 segment
+seismal
+seismic
 selfish
 seminar
 sensual
@@ -1308,6 +1319,7 @@ sustain
 swallow
 sweater
 synagog
+synapse
 synergy
 synonym
 tactful
