--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -188,7 +188,7 @@ constantly ,/adv./@经常地;
 constraint ,/n./@約束;
 consultant ,/n./@顾问;,/n./@會診醫生;
 consummate ,/adj./@完美的;,/adj./@圓滿的;,/adj./@至上的;,/vt./@完成;
-contagious ,/adj./@感染性的;,/adj./@蔓延的;
+contagious ,/adj./@感染性的;,/adj./@蔓延的;,/adj./@接觸傳染性的;
 contestant ,/n./@竞争者;,/n./@竞赛者;,/n./@争论者;
 contiguous ,/adj./@連續的;,/adj./@鄰近的;
 contingent ,/adj./@偶然的;,/adj./@或有的;,/n./@分遣隊;
@@ -260,6 +260,7 @@ discourage ,/v./@使沮丧;
 discretion ,/n./@决断能力;,/n./@处理权;,/n./@酌情决定权;,/n./@谨慎;,/n./@慎重;
 discussion ,/n./@讨论;
 disgusting ,/adj./@令人厌恶的;
+dispersion ,/n./@分散;,/n./@流散;,/n./@離散;,/n./@散佈;,/n./@消散;,/n./@彌散;,/n./@色散;,/n./@散開;
 dispossess ,/vt./@剥夺;
 disruption ,/n./@破坏;
 disruptive ,/adj./@破坏性的;,/adj./@引起混亂的;,/adj./@顛覆性的;
@@ -420,6 +421,7 @@ investment ,/n./@投资;
 invigorate ,/v./@激活;
 invincible ,/adj./@無敵的;
 invitation ,/n./@邀请;
+invocation ,/n./@援引;,/n./@引用;,/n./@召喚;,/n./@祈求;
 ionization ,/n./@電離;,/n./@離子化;
 irrational ,/adj./@不合理的;
 irreverent ,/adj./@不敬的;
