--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -6,7 +6,7 @@ acknowledge ,/v./@承认;
 acquisition ,/n./@获得;,/n./@获得物;,/n./@习得;,/n./@收购;
 adversative ,/adj./@反義的;,/n./@反義字;
 affectation ,/n./@做作;
-affirmation ,/n./@肯定;,/n./@确定;,/n./@确认;
+affirmation ,/n./@肯定;,/n./@确定;,/n./@确认;,/n./@證實;
 affirmative ,/adj./@肯定的;
 aggregation ,/n./@集合;
 agriculture ,/n./@农业;
@@ -78,6 +78,7 @@ confinement ,/n./@限制;,/n./@監禁;,/n./@分娩;
 confounding ,/adj./@令人困惑的;
 conjugation ,/n./@詞形變化;
 conjunction ,/n./@结合;
+conjuration ,/n./@魔術;,/n./用魔法@召喚;,/n./@魔法;,/n./@施法;,/n./@咒語;,/n./@咒文;,/n./@符咒;,/n./@魔咒;
 connotation ,/n./@暗示;,/n./@含義;
 consecutive ,/adj./@连贯的;,/adj./@连续的;
 consequence ,/n./@结果;
@@ -209,7 +210,7 @@ impertinent ,/adj./@不適當的;,/adj./@無理的;
 implication ,/n./@含义;,/n./@暗示;
 improvement ,/n./@改善;
 inadvertent ,/adj./@粗心的;,/adj./@无意的;,/adj./@不注意的;,/adj./@怠慢的;
-incantation ,/n./@咒语;,/n./@念咒;
+incantation ,/n./@咒语;,/n./@念咒;,/n./@咒文;
 incarcerate ,/v./@監禁;,/vt./@关押;,/vt./@囚禁;
 incarnation ,/n./@化身;
 inclination ,/n./@傾向;,/n./@愛好;,/n./@傾斜;,/n./@斜坡;,/n./@意向;
@@ -233,6 +234,7 @@ insecticide ,/n./@杀虫剂;
 inspiration ,/n./@灵感;,/n./@鼓舞;,/n./@吸气;,/n./@妙计;
 installment ,/n./@分期付款;
 instantiate ,/v./@實例化;,/v./@例示;
+instigation ,/n./@煽動;,/n./@教唆;,/n./@鼓动;
 instinctive ,/adj./@本能的;
 institution ,/n./@制度;,/n./@机构;
 instruction ,/n./@指導;,/n./@指示;,/n./@指令;,/n./@教导;,/n./@说明;
@@ -270,6 +272,7 @@ metaphysics ,/n./@形而上学;
 methodology ,/n./@方法論;
 microscopic ,/adj./@精微的;,/adj./@微小的;,/adj./@顯微鏡的;,/adj./@只能從顯微鏡裡看到的;
 mindfulness ,/n./@留心;,/n./@察覺;
+mischievous ,/adj./@恶意的;,/adj./@惡作劇的;,/adj./@傷害性的;,/adj./@有害的;
 misconstrue ,/vt./@誤會;,/vt./@误解;
 multinomial ,/n./@多項式;,/adj./@多項的;
 nationality ,/n./@国籍;
@@ -428,7 +431,7 @@ transparent ,/adj./@透明的;
 transponder ,/n./@收發機;
 treacherous ,/adj./@奸诈的;,/adj./@叛逆的;,/adj./@危险的;
 treasurable ,/adj./@值得珍爱的;
-troublesome ,/adj./@麻烦的;
+troublesome ,/adj./@令人煩惱的;,/adj./@討厭的;,/adj./@麻煩的;,/adj./@困難的;
 ultraphonic ,/adj./@超声的;,/n./@超声;
 unbeknownst ,/adj./@不知道的;,/adj./@不知的;
 underground ,/adj./@在地下;,/adj./@地下的;,/n./@地铁;,/n./@地下组织;
