--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -27,7 +27,8 @@ concatenation ,/n./@連結;,/n./@串聯;
 concentration ,/n./@專心;,/n./@聚焦;
 condescending ,/adj./@謙遜的;,/adj./@屈尊的;
 configuration ,/n./@配置;,/n./@结构;
-confrontation ,/n./@冲突;,/n./@对抗;
+conflagration ,/n./@大火;,/n./@大火災;
+confrontation ,/n./@冲突;,/n./@对抗;,/n./@對峙;
 congressional ,/adj./@会议的;,/adj./@国会的;
 conscientious ,/adj./@勤勤懇懇的;,/adj./@良心的;,/adj./@煞費苦心的;
 consciousness ,/n./@知覺;
@@ -70,7 +71,7 @@ inspirational ,/adj./@鼓舞人心的;,/adj./@激发灵感的;
 instantaneous ,/adj./@瞬间的;,/adj./@即時的;,/adj./@瞬時的;
 intergalactic ,/adj./@星系際的;,/adj./@銀河際的;
 international ,/adj./@国际的;
-interpolation ,/n./@插入;,/n./@篡改;,/n./@填寫;
+interpolation ,/n./@插入;,/n./@篡改;,/n./@填寫;,/n./@插话;,/n./@插補;
 interrogation ,/n./@讯问;,/n./@审问;
 introspection ,/n./@自省;,/n./@内省;
 inventiveness ,/n./@創造力;
