--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -855,7 +855,7 @@ Ruth ,/n./@路得;
 sack ,/v./@洗劫;,/n./@麻袋;,/v./@解僱;
 safe ,/adj./@安全的;
 saga ,/n./@傳說;
-sage ,/n./@聖人;
+sage ,/n./@聖人;,/n./@智者;,/n./@賢人;,/n./@鼠尾草;,/adj./@賢明的;,/adj./@睿智的;
 said ,/v./@說;
 sail ,/v./@航行;,/n./@帆;
 sake ,/n./@目的;,/n./@利益;
@@ -870,6 +870,7 @@ scan ,/v./@掃描;
 scar ,/n./@傷痕;
 seal ,/v./@封;,/n./@海豹;
 seam ,/v./@縫合;,/v./@裂開;,/n./@縫;,/n./@缝隙;,/n./@礦層;,/n./@地層;
+sect ,/n./@教派;,/n./@派別;,/n./@宗派;,/n./@異端;,/n./@黨派;,/n./@學派;
 seed ,/n./@種子;
 seek ,/v./@尋覓;
 seem ,/v./@好像;
