--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -423,7 +423,7 @@ event ,/n./@事件;
 every ,/adj./@每@一;
 evict ,/vt./@驅逐;,/vt./@逐出;
 evite ,/v./@囘避;
-evoke ,/v./@喚起;
+evoke ,/v./@喚起;,/vt./@引起;,/vt./@召喚;
 exact ,/adj./@精確的;
 exalt ,/v./@提升;,/v./@贊揚;
 excel ,/v./@超過;,/v./@擅長;
@@ -1167,6 +1167,8 @@ stiff ,/adj./@拘謹的;,/adj./@僵硬的;,/adj./@剛強的;,/adj./@強烈的;,/
 still ,/adv./@一直;,/adv./@仍然;
 sting ,/v./@刺;,/v./@蟄;
 stock ,/n./@儲備;,/n./@股票;
+stoic ,/adj./@禁慾的;,/n./@禁慾主義者;
+Stoic ,/adj./@斯多葛學派的;,/n./@斯多葛學派哲學家;
 stone ,/n./@石頭;
 stood ,/v./@站;
 stool ,/n./@凳子;,/v./@引誘;
