--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -32,7 +32,7 @@ aerate ,/vt./@使通氣;,/vt./@使透氣;,/vt./@充氣於;
 aerial ,/adj./@空中的;,/adj./@航空的;,/adj./@天空的;,/adj./@空氣的;,/n./@天綫;
 affair ,/n./@事情;
 affect ,/v./@影響;
-affirm ,/v./@斷定;
+affirm ,/v./@斷定;,/vt./@申明;,/vt./@確認;,/vt./@證實;
 afield ,/adj./@在遠處;
 afraid ,/v./@恐怕;,/v./@害怕;
 agency ,/n./@代理;
@@ -58,6 +58,7 @@ animal ,/n./@動物;
 animus ,/n./@敵意;
 anneal ,/vt./@退火;
 annual ,/adj./@每年的;
+anoint ,/vt./@塗油於;,/vt./@塗膏於;,/vt./@抹油於;,/vt./@膏立;
 answer ,/v.//n./@回答;
 anthem ,/n./@頌歌;,/n./@聖歌;,/n./@贊美詩;,/n./@贊美歌;
 antler ,/n./@鹿角;,/n./@茸角;,/n./@多叉鹿角;
@@ -676,7 +677,7 @@ heckle ,/v./@詰問;
 hectic ,/adj./@忙乱的;
 height ,/n./@髙;,/n./@髙度;
 helium ,/n./@氦;
-herald ,/n./@先驅;,/n./@先兆;,/vt./@宣告;
+herald ,/n./@先驅;,/n./@先兆;,/vt./@宣告;,/n./@傳令官;,/n./@使者;
 here's ,/n.v./@這是;
 hereby ,/adv./@以此;
 heresy ,/n./@異端;,/n./@邪教;
@@ -712,7 +713,7 @@ immune ,/v./@免疫;
 impact ,/v./@影響;
 impair ,/vt./@損害;
 impale ,/vt./@刺穿;
-impart ,/vt./@賦予;
+impart ,/vt./@賦予;,/vt./@給予;,/vt./@傳授;,/vt./@傳達;,/vt./@透露;
 impede ,/v./@妨礙;,/v./@阻礙;
 import ,/v./@輸入;,/v./@進口;
 impose ,/v./@實施;,/v./@推行;
@@ -751,7 +752,7 @@ invent ,/v./@发明;,/v./@创造;
 invert ,/v./@轉化;,/v./@翻轉;,/v./@倒置;
 invest ,/v./@投資;
 invite ,/v./@邀請;
-invoke ,/vt./@調用;,/vt./@祈求;
+invoke ,/vt./@調用;,/vt./@祈求;,/vt./@援引;,/vt./@訴諸;,/vt./@喚起;,/vt./@召喚;
 island ,/n./@島嶼;
 Israel ,/n./@以色列;
 jagger ,/n./@鑿子;,/n./@鋸齒;
