--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -300,7 +300,7 @@ conform ,/v./@符合;,/v./@遵守;
 confuse ,/v./@使困惑;
 conical ,/adj./@圓錐形的;
 conifer ,/n./@松柏;
-conjure ,/v./@提出;,/v./@想象;,/v./@施魔法;
+conjure ,/vt./@用魔法變出;,/vt./@唸咒召喚;,/vi./@施魔法;,/vi./@變魔術;,/v./@令人想起;
 connect ,/v./@連接;
 connote ,/v./@意味著;
 conquer ,/v./@攻擊;
@@ -665,6 +665,7 @@ hauberk ,/n./@锁子甲;
 hauteur ,/n./@傲慢;
 healthy ,/adj./@健康的;
 hearken ,/v./@傾聽;
+hearsay ,/n./@傳聞;,/n./@風聞;,/n./@謠傳;
 heather ,/adj./@雜色的;,/n./@石南;
 heating ,/n./@供暖;
 heavily ,/adv./@重地;
@@ -713,7 +714,7 @@ include ,/v./@包括;
 indulge ,/v./@縱容;,/v./@放任;
 inertia ,/n./@慣性;,/n./@惰性;,/n./@不活動;
 inferno ,/n./@地獄;,/n./@陰間;
-inflict ,/v./@打擊;,/v./@損傷;
+inflict ,/vt./@強加;,/vt./@給予@打擊;,/vt./@使@遭受;
 ingress ,/n./@进入;,/n./@入口;,/n./@入境;
 inhabit ,/v./@居住;
 inherit ,/v./@繼承;,/v./@遺傳;
@@ -880,6 +881,7 @@ novelty ,/n./@新奇;
 noxious ,/adj./@有害的;,/adj./@有毒的;
 nuclear ,/adj./@原子核的;,/adj./@核心的;
 nucleon ,/n./@核子;
+nucleus ,/n./@核;,/n./@核心;,/n./@原子核;,/n./@細胞核;,/n./@彗核;,/n./@晶核;
 numeric ,/adj./@數値的;,/adj./@數字的;,/n./@數;
 nymphet ,/adj./@仙女般的;,/n./@少婦;
 obelisk ,/n./@方尖碑;,/n./@方尖塔;,/n./@短箭號;
@@ -961,6 +963,7 @@ payment ,/n./@支付;,/n./@付款;
 peacock ,/n./@雄孔雀;,/n./@孔雀;
 peasant ,/n./@農民;
 pegasus ,/n./@飛馬;,/n./@詩人的靈感;
+penance ,/n./@苦修;,/n./@苦行;,/n./@補贖;
 pendant ,/n./@吊墜;
 pending ,/adj./@未決的;
 pensive ,/adj./@沉思的;,/adj./@憂慮的;
@@ -1226,6 +1229,7 @@ simplex ,/adj./@簡單的;
 sincere ,/adj./@眞誠的;
 Sinitic ,/adj./@漢語的;
 sixteen ,/adj./@十六;
+sizable ,/adj./@相當大的;,/adj./@相當多的;
 skeptic ,/n./@懷疑論者;
 skylark ,/vi./@胡鬧;,/n./@雲雀;
 skyline ,/n./@天涯;
@@ -1250,6 +1254,7 @@ solvent ,/adj./@有償付能力的;,/adj./@有溶解力的;,/n./@溶劑;
 somatic ,/adj./@軀體的;,/adj./@身體的;,/adj./@肉体的;,/adj./@細胞體的;
 somehow ,/adv./@以某種方式;
 someone ,/n./@有人;,/n./@某人;
+sorcery ,/n./@巫術;,/n./@魔術;,/n./@魔法;,/n./@妖術;
 souffle ,/n./@蛋奶酥;
 soybean ,/n./@大豆;,/n./@黃豆;
 sparkle ,/v./@發火花;,/v./@閃耀;
