--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -10,6 +10,7 @@ abruptly ,/adv./@突然地;
 absolute ,/adj./@绝对的;,/adj./@完全的;
 abstract ,/adj./@抽象的;
 abundant ,/adj./@丰富的;
+academia ,/n./@學術界;,/n./@學術圈;,/n./@學術環境;
 academic ,/adj./@學術的;,/adj./@學院的;
 accident ,/n./@事故;
 accolade ,/v./@同意;
@@ -67,6 +68,7 @@ anecdote ,/n./@軼事;
 annotate ,/v./@注释;
 announce ,/v./@宣布;
 annoying ,/adj./@令人烦恼的;
+anointed ,/adj./@被指定的;,/adj./@被提名的;,/adj./@受膏的;,/adj./@選定的;
 antelope ,/n./@羚羊;
 anterior ,/adj./@前面的;
 antidote ,/n./@解毒劑;,/n./@解藥;
@@ -366,6 +368,7 @@ dismount ,/v./@下;,/vt./@卸下;
 disorder ,/n./@混乱;
 dispatch ,/v./@派遣;,/v./@分派;,/n./@派遣;,/n./@急件;,/n./@杀死;,/vt./@杀死;,/vt./@发送;
 dispense ,/v./@分配;,/v./@免除;,/v./@豁免;
+disperse ,/v./@分散;,/v./@散開;,/vt./@驅散;,/vt./@解散;,/vt./@疏散;,/vt./@散播;,/vi./@消散;
 disposal ,/n./@处理;,/n./@清理;
 disprove ,/v./@反驳;
 dissolve ,/v./@溶解;
@@ -501,7 +504,7 @@ footwear ,/n./@鞋類;
 forceful ,/adj./@有力的;
 forecast ,/vt./@预报;
 foreland ,/n./@岬;
-foremost ,/adj./@最初的;,/adj./@一流的;
+foremost ,/adj./@最初的;,/adj./@一流的;,/adj./@最先的;
 forensic ,/adj./@法院的;,/n./@法庭的;
 forester ,/n./@林務官;,/n./@林务员;
 fortress ,/n./@城堡;
@@ -902,7 +905,7 @@ polaroid ,/n./@偏光板;,/n./@偏振片;
 politics ,/n./@政治;
 polyglot ,/n./@精通數種語言的人;,/adj./@用數種語言的;
 polymath ,/adj./@博學的;,/n./@博學家;
-populace ,/n./@民众;,/n./@大众;
+populace ,/n./@民众;,/n./@大众;,/n./@全體居民;
 portable ,/adj./@可携带的;
 position ,/n./@位置;,/n./@姿态;
 positive ,/adj./@明確的;,/adj./@肯定的;,/adj./@絕對的;,/adj./@陽性的;,/adj./@正的;
@@ -1064,6 +1067,7 @@ simulink ,/n./@模型;,/n./@仿真软件;
 singsong ,/n./@聲調起伏的腔調;,/n./@齊唱;,/adj./@聲調起伏的;
 singular ,/adj./@单数的;,/adj./@独特的;
 sinister ,/adj./@陰險的;,/adj./@凶兆的;,/adj./@災難性的;
+sizeable ,/redirected./@target="sizable";
 skeletal ,/adj./@骨骼的;,/adj./@骸骨的;,/adj./@梗概的;,/adj./@大概的;
 skeleton ,/n./@骨架;,/n./@骨骼;,/n./@綱要;
 skillful ,/adj./@娴熟的;
@@ -1219,7 +1223,7 @@ uprising ,/n./@起义;
 urbanity ,/n./@雅致;,/n./@都市風格;,/n./@禮貌;
 vacation ,/n./@假期;
 validate ,/v./@驗證;,/v./@證實;,/v./@確認;,/v./@生效;
-validity ,/n./@有效性;,/n./@正确性;
+validity ,/n./@有效性;,/n./@正确性;,/n./@合法性;
 valorous ,/adj./@勇敢的;,/adj./@勇武的;
 valuable ,/adj./@有價值的;,/adj./@寶貴的;
 vaporize ,/v./@蒸發;
