--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -108,6 +108,7 @@ available ,/adj./@可用的;
 avalanche ,/n./@雪崩;,/n./@山崩;,/n./@大批;
 awestruck ,/adj./@充滿敬畏的;
 backslash ,/n./@反斜杠;
+backwater ,/n./@逆流水;,/n./@落後地區;,/n./@荒僻的地方;,/n./@與世隔絕的地方;
 bacterium ,/n./@細菌;
 balaclava ,/n./@巴拉克拉瓦盔式帽;
 ballerina ,/n./@芭蕾舞女演員;
@@ -407,7 +408,7 @@ excavator ,/n./@挖掘机;,/n./@发掘者;
 exceeding ,/adj./@极其;
 excellent ,/adj./@卓越的;,/adj./@极好的;
 exception ,/n./@例外;
-excessive ,/adj./@過度的;,/adj./@過多的;
+excessive ,/adj./@過度的;,/adj./@過多的;,/adj./@過分的;,/adj./@極度的;
 exclusive ,/adj./@独有的;
 excretory ,/adj./@排泄的;,/adj./@分泌的;
 exculpate ,/v./@開脫罪責;
@@ -428,7 +429,7 @@ expensive ,/adj./@昂贵的;
 explosion ,/n./@爆炸;
 explosive ,/adj./@易爆的;
 expressly ,/adv./@清楚地;,/adv./@明顯的;
-exquisite ,/adj./@精緻的;
+exquisite ,/adj./@精緻的;,/adj./@精美的;,/adj./@劇烈的;,/adj./@極度的;,/adj./@強烈的;,/adj./@敏銳的;,/adj./@有高度鑑賞力的;
 extension ,/v./@伸展;,/v./@延长;
 extensive ,/adj./@广阔的;,/adj./@廣泛的;,/adj./@廣大的;
 extrovert ,/n./@外向;
@@ -736,6 +737,7 @@ perimeter ,/n./@周長;,/n./@周界;
 permanent ,/adj./@持久的;,/adj./@永恒的;
 perpetual ,/adj./@无休止的;
 persecute ,/v./@迫害;
+personage ,/n./@名人;,/n./@大人物;,/n./@要人;,/n./@人物;,/n./@角色;
 pertinent ,/adj./@適當的;
 pervasive ,/adj./@普遍的;,/adj./@流行的;
 pessimism ,/n./@悲观;
@@ -872,6 +874,7 @@ retaliate ,/v./@報復;
 retribute ,/v./@报应;
 rheumatic ,/adj./@风湿病的;,/adj./@患风湿病的;
 righteous ,/adj./@正义的;
+sacrament ,/n./@聖禮;,/n./@聖典;,/n./@聖餐;,/n./@聖物;
 sacrifice ,/n./@牺牲;
 salacious ,/adj./@淫穢的;,/adj./@淫蕩的;,/adj./@猥褻的;,/adj./@色情的;
 salvation ,/n./@拯救;
