--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -260,6 +260,7 @@ discourage
 discretion
 discussion
 disgusting
+dispersion
 dispossess
 disruption
 disruptive
@@ -420,6 +421,7 @@ investment
 invigorate
 invincible
 invitation
+invocation
 ionization
 irrational
 irreverent
