--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -78,6 +78,7 @@ confinement
 confounding
 conjugation
 conjunction
+conjuration
 connotation
 consecutive
 consequence
@@ -233,6 +234,7 @@ insecticide
 inspiration
 installment
 instantiate
+instigation
 instinctive
 institution
 instruction
@@ -270,6 +272,7 @@ metaphysics
 methodology
 microscopic
 mindfulness
+mischievous
 misconstrue
 multinomial
 nationality
