--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -665,6 +665,7 @@ hauberk
 hauteur
 healthy
 hearken
+hearsay
 heather
 heating
 heavily
@@ -880,6 +881,7 @@ novelty
 noxious
 nuclear
 nucleon
+nucleus
 numeric
 nymphet
 obelisk
@@ -961,6 +963,7 @@ payment
 peacock
 peasant
 pegasus
+penance
 pendant
 pending
 pensive
@@ -1226,6 +1229,7 @@ simplex
 sincere
 Sinitic
 sixteen
+sizable
 skeptic
 skylark
 skyline
@@ -1250,6 +1254,7 @@ solvent
 somatic
 somehow
 someone
+sorcery
 souffle
 soybean
 sparkle
