--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -10,6 +10,7 @@ abruptly
 absolute
 abstract
 abundant
+academia
 academic
 accident
 accolade
@@ -67,6 +68,7 @@ anecdote
 annotate
 announce
 annoying
+anointed
 antelope
 anterior
 antidote
@@ -366,6 +368,7 @@ dismount
 disorder
 dispatch
 dispense
+disperse
 disposal
 disprove
 dissolve
@@ -1064,6 +1067,7 @@ simulink
 singsong
 singular
 sinister
+sizeable
 skeletal
 skeleton
 skillful
