--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -108,6 +108,7 @@ available
 avalanche
 awestruck
 backslash
+backwater
 bacterium
 balaclava
 ballerina
@@ -736,6 +737,7 @@ perimeter
 permanent
 perpetual
 persecute
+personage
 pertinent
 pervasive
 pessimism
@@ -872,6 +874,7 @@ retaliate
 retribute
 rheumatic
 righteous
+sacrament
 sacrifice
 salacious
 salvation
