--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -76,7 +76,7 @@ anything ,/pron./@任何事;
 aperitif ,/n./@开胃酒;
 aperture ,/n./@孔;,/n./@隙縫;,/n./@孔徑;,/n./@光圈;,/n./@孔洞;
 aphorism ,/n./@格言;,/n./@箴言;
-apostasy ,/n./@變節;,/n./@背叛;
+apostasy ,/n./@變節;,/n./@背叛;,/n./@叛教;
 appalled ,/adj./@惊骇的;
 apparent ,/adj./@明显的;,/adj./@表面上的;
 appendix ,/n./@附录;,/n./@阑尾;
