--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -93,6 +93,7 @@ participation ,/n./@参与;,/n./@分享;,/n./@参股;
 perfectionism ,/n./@完美主義;
 perfectionist ,/n./@完美主義者;
 perpendicular ,/n./@垂线;
+physiotherapy ,/n./@物理療法;
 precipitation ,/n./@沉澱;,/n./@降水;,/n./@急躁;,/n./@魯莽;
 predominantly ,/adv./@主要地;,/adv./@顯著的;
 prepositional ,/adj./@介詞的;,/adj./@前置詞的;
