--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -207,7 +207,7 @@ bucket ,/n./@桶;
 buckle ,/n./@帶釦;,/n./@搭釦;,/vt./@扣上;,/vt./@扣住;
 budget ,/n./@預算;
 budgie ,/n./@虎皮鸚鵡;,/n./@相思鸚鵡;
-buffer ,/n./@緩衝區;
+buffer ,/n./@緩衝器;,/n./@減震器;,/n./@緩衝物;,/n./@緩衝存儲器;,/n./@緩衝區;
 buffet ,/n./@自助餐;
 bullet ,/n./@子彈;
 bumper ,/n./@保险杠;,/adj./@丰收的;,/adj./@特大的;
