--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -451,7 +451,7 @@ Madagascar ,/n./@馬達加斯加;
 magistrate ,/n./@地方执法官;
 mainstream ,/n./@主流;
 malevolent ,/adj./@惡毒的;,/adj./@有惡意的;
-manipulate ,/v./@操纵;,/v./@操作;,/v./@摆布;
+manipulate ,/v./@操纵;,/v./@操作;,/v./@摆布;,/vt./@篡改;
 manuscript ,/n./@手稿;,/n./@手抄本;
 masquerade ,/n./@化妆;,/n./@伪装;,/n./@化妆舞会;
 masturbate ,/vi./@手淫;
